	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 will not understand this new
	  format.  The automatic format conversion can be avoided by running
	  the following command on the MDS:
	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.

Severity   : normal
Bugzilla   : 15139
Frequency  : rare, on clear nid stats
Description: ASSERTION(client_stat->nid_exp_ref_count == 0)
Details    : when clean nid stats sometimes try destroy live entry,
             and this produce panic in free.

Severity   : major
Bugzilla   : 15575
Description: Stack overflow during MDS log replay
Details    : ease stack pressure by using a thread dealing llog_process.

Severity   : minor
Frequency  : very rare
Bugzilla   : 13380
Description: MDT cannot be unmounted, reporting "Mount still busy"
Details	   : Mountpoint references were being leaked during open reply
	     reconstruction after an MDS restart.  Drop mountpoint reference
	     in reconstruct_open() and free dentry reference also.

Severity   : normal
Bugzilla   : 15443
Description: wait until IO finished before start new when do lock cancel.
Details    : VM protocol want old IO finished before start new, in this case
             need wait until PG_writeback is cleared until check dirty flag and
             call writepages in lock cancel callback.

Severity   : normal
Bugzilla   : 12888
Description: mds_mfd_close() ASSERTION(rc == 0) 
Details    : In mds_mfd_close(), we need protect inode's writecount change 
	     within its orphan write semaphore to prevent possible races.

Severity   : minor
Bugzilla   : 14645
Frequency  : rare, on shutdown ost
Description: don't hit live lock with umount ost.
Details    : shrink_dcache_parent can be in long loop with destroy dentries,
	     use shrink_dcache_sb instead.

Severity   : minor
Bugzilla   : 14949
Description: don't panic with use echo client